--- a/Retrofit/Retrofit.csproj
+++ b/Retrofit/Retrofit.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.17" />
     <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="16.170.0" />
   </ItemGroup>
 
