--- a/Retrofit/Retrofit.csproj
+++ b/Retrofit/Retrofit.csproj
@@ -27,7 +27,7 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 	<Target Name="NodeBuild" BeforeTargets="Build">	  
-	  <Exec WorkingDirectory="$(SpaRoot)" Command="npm run build" />
+	 <!-- <Exec WorkingDirectory="$(SpaRoot)" Command="npm run build" />-->
     <!--<Exec WorkingDirectory="$(SpaRoot)" Command="npm run dev" />-->
 	</Target>
 	 
