--- a/Retrofit/Retrofit.csproj
+++ b/Retrofit/Retrofit.csproj
@@ -9,13 +9,13 @@
     <IsPackable>false</IsPackable>
 	<SpaRoot>client\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
-    <SpaProxyServerUrl>https://localhost:3399</SpaProxyServerUrl>
+    <SpaProxyServerUrl>https://localhost</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
 	<ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.17" />
     <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="16.170.0" />
   </ItemGroup>
@@ -26,6 +26,10 @@
     <None Remove="$(SpaRoot)**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
+  
+   <ItemGroup>
+     <Folder Include="wwwroot\" />
+   </ItemGroup>
 	<Target Name="NodeBuild" BeforeTargets="Build">	  
 	 <!-- <Exec WorkingDirectory="$(SpaRoot)" Command="npm run build" />-->
     <!--<Exec WorkingDirectory="$(SpaRoot)" Command="npm run dev" />-->
